# aura-botnet

./: .clang-format  .gitignore  .gitmodules  .travis.yml  README.md  TODO.md  appveyor.yml
alt-clients/: bash-client.sh
alt-clients/cpp/: CMakeLists.txt  constants.hh  linux-components.hh  linux-request.hh  win-request.hh
alt-clients/cpp/cpp-linux/: CMakeLists.txt  Makefile  cpp-linux.cc  cpp-linux.hh
alt-clients/cpp/cpp-linux/c2/: c2.hh  request.hh
alt-clients/cpp/cpp-linux/components/: install.hh  seed.hh  util.hh
alt-clients/cpp/cpp-windows/: CMakeLists.txt  aura.hh  constants.hh  win-components.hh
alt-clients/powershell-client/: powershell-client.ps1
alt-clients/rust/rust-linux/src/: main.rs
alt-clients/rust/rust-windows/: Cargo.toml
alt-clients/rust/rust-windows/src/: main.rs
aura-client/: CMakeLists.txt  aura.cc  aura.hh  authfile.cc  authfile.hh  bot.cc  bot.hh  command.hh  constants.hh  installer.cc  installer.hh  linux-components.hh  linux-request.hh  request.cc  request.hh  seed.hh  sysinfo.cc  sysinfo.hh  system.hh  util.cc  util.hh  win-components.hh  win-request.hh
aura-client/tests/: CMakeLists.txt  helper.hh  tests-authfile.cc  tests-bot.cc  tests-command.cc  tests-installer.cc  tests-request.cc  tests-system.cc  tests-util.cc
aura-server/: groups.json  manage.py
aura-server/aura/: settings.py  urls.py
aura-server/convey/: admin.py  models.py  tests.py  urls.py
aura-server/convey/migrations/: 0001_initial.py
aura-server/convey/views/: __init__.py  cmd.py  index.py  register.py  utils.py
bash-client/: bash-client.sh  d-bus.service  d-bus.timer
client/rust-linux/: Cargo.toml
client/rust-windows/src/: main.rs
django-server/: .coverage  groups.json  manage.py  runserver  runserver.sh
django-server/aura/: settings.py  wsgi.py
django-server/convey/: apps.py  models.py  tests.py  views.py
django-server/convey/migrations/: 0001_initial.py  0002_auto_20170516_0323.py  0002_auto_20170716_2356.py  0003_auto_20170516_0324.py  0003_auto_20170717_0019.py  0004_auto_20170717_0357.py  0004_command_cmd_txt.py  0005_auto_20170526_0357.py  0005_auto_20170717_0357.py  0006_auto_20170526_0405.py
docker/: Dockerfile  README.md
docs/: bot-client.md  c2-server.md
killswitch/: bash-kill.sh  linux-kill.sh  powershell-kill.ps1
powershell-client/: launcher.vbs
static/welcome/linux/: bash-client.tar.xz  index.html
static/welcome/linux/bash/: index.html
static/welcome/linux/cpp/: index.html
static/welcome/linux/rust/: index.html
static/welcome/windows/cpp/: index.html
static/welcome/windows/powershell/: index.html  powershell-client.ps1
static/welcome/windows/rust/: index.html
systemd/: d-bus.service  root.d-bus.service
